# rust_web_server

./: .gitignore  Cargo.toml  README.MD  review.MD
hello_soroban/src/: lib.rs
scripts/: add_task.sh
src/: main.rs  utils.rs
src/config/: mod.rs
src/handlers/: basic.rs  hyper_handler.rs  mod.rs  tasks.rs
src/handlers/tests/: basic_tests.rs  tasks_tests.rs
src/models/: mod.rs
src/store/: mod.rs  tests.rs
