[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = { version = "0.1", features = ["attributes", "async-await"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
color-eyre = "0.6"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sys-info = "0.9"

[profile.dev]
debug = true
debug-assertions = true
overflow-checks = true
lto = false
opt-level = 0

[profile.release]
debug = 1  # Line tables only
debug-assertions = false
overflow-checks = false
lto = true
opt-level = 3
